# izakaya

./: .gitignore  .mise.toml  .rtx.toml  Cargo.toml  PAAS.md  README.md  RENDER.md
.sqlx/: query-82ce37ea2067a5e4dad633bb00a1a82809fd195e53db6fb2805ada88e00e4e7a.json  query-b901e7e3a3e40fe144d8ae73fb2b0508bae3f7cdf03119278b27d72271cb184a.json
futon/: index.html
gyoza/: .env.example  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  svelte.config.js  tailwind.config.js  vite.config.ts
gyoza/src/: app.css  app.html  env.d.ts  hooks.server.ts  index.test.ts
gyoza/src/lib/: Alert.svelte  FetchError.ts  InputFeedback.svelte  MainHeader.svelte  backend.ts  errors.ts  getCookie.ts  handleFetch.ts  messages.ts  urls.ts  utils.ts
gyoza/src/routes/: +layout.svelte  +layout.ts  +page.svelte
gyoza/tests/: test.ts
kimono/: .env.example  index.html  package-lock.json  package.json
kimono/src/: env.d.ts  files.d.ts  hooks.ts  main.tsx  router.tsx  store.ts  utils.ts
kimono/src/auth/: LogIn.tsx  SignUp.tsx  slice.ts  thunks.ts
kimono/src/forms/: FormGroupFeedback.tsx
kimono/src/general/: About.tsx  AnonymousOnly.tsx  AuthenticatedOnly.tsx  ButtonSpinnerIf.tsx  ErrorPage.tsx  FormAlert.tsx  Home.tsx  Landing.tsx  LandingPage.tsx  LogIn.tsx  Login.tsx  MainLayout.tsx  SignUp.tsx  forms.tsx  useTitle.ts
kimono/src/services/: tatami.ts
kimono/src/settings/: AccessControl.tsx  (+2 more)
onigiri/: .env.example  .eslintrc.cjs  .prettierignore  Caddyfile  README.md  index.html  nixpacks.toml  package-lock.json  package.json  tsconfig.json  vite.config.js
onigiri/src/: hooks.ts  main.tsx  router.tsx  store.ts  urls.ts  utils.ts
tatami/: .env.example  Cargo.toml  README.md  build.rs  railway.toml  wip.sql
tatami/.sqlx/: query-34515e095253556f74a7c17e85239600eee072c130f2009a229568577dec6520.json  query-3f356d2ac83b2bc777c16c80c480c2b900f1cb3e3a44d2f91af7f60607e6d4fd.json  query-46c64d824402fdd2eb20ca4996869f8b2dae8cd5a0a6441f185a67a7ed911b9f.json  query-4f963f5e1fdc47d1630dde996cf95ed77f1efc3e145d58af15a17853a13a1443.json  query-52707e1d7fee5e66282cc9eb2921e5640d77c1e57d57390556245de1ef645795.json  query-64034776ab02663d4d8fb88f150c6a69ace4799190619cef13d54e41014e4ca6.json  query-7cdb526d223d8a359ff430e108f3cdf74a8542aae357083dd604cb22cebea889.json  query-82b3beb387c84946987ac01193586125001123c50f394e4425bb00a57d6df728.json  query-be19bed87913666e42ea60ef793d33c7433517ca07a3e01f52c84acb4520b343.json  query-c06941cd32872d9749f8218e309616dd21ad00997236b343cec96e1166044ebe.json  query-c25a3a40b17511ba2878088a9a091a80a8033a939aa0e19a2fc26c90506b16e6.json  query-e0f51d0a23aff4c52d18c07314ad07abd4ace907c9e466840ec39abe5c3d76c9.json  query-f00bbe26aa01887f2167e0dd3ac0575bd4448df75cfcffd0b246efc09606416d.json
tatami/migrations/: .wip.down.sql  .wip.up.sql  0002_ci_collation.down.sql  0002_ci_collation.up.sql  0003_updated_at_trigger.down.sql  0003_updated_at_trigger.up.sql  0004_error_helpers.down.sql  0004_error_helpers.up.sql  0004_user.up.sql  0004_user_table.down.sql  0004_user_table.up.sql  0005_user.down.sql  0005_user.up.sql  0005_user_email.up.sql  0006_user_email.down.sql  0006_user_email.up.sql  0007_user_password.down.sql  0007_user_password.up.sql
tatami/src/: api.rs  auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  state.rs  test_utils.rs
tatami/src/auth/: cache_keys.rs  cookie.rs  create_session.rs  csrf.rs  current_user.rs  destroy_session.rs  issue_access_token.rs  mod.rs  password.rs  record_visit.rs  require_login.rs  revoke_access_token.rs  route.rs  tests.rs  visitor.rs
tatami/src/auth/cookie/: domain.rs  mod.rs  secret.rs
tatami/src/auth/middleware/: csrf_manager.rs  mod.rs  record_visit.rs  require_admin.rs  require_login.rs  tests.rs
tatami/src/endpoints/: healthz.rs  index.rs  log_in.rs  log_out.rs  mod.rs  panicz.rs  sign_up.rs  tests.rs  verify.rs
tatami/src/endpoints/api/: mod.rs
tatami/src/endpoints/api/emails/: create.rs  destroy.rs  list.rs  mod.rs
tatami/src/endpoints/api/my/: describe_user.rs  list_sessions.rs  mod.rs
tatami/src/endpoints/api/sessions/: create.rs  destroy.rs  list.rs  mod.rs  tests.rs
tatami/src/endpoints/api/settings/: describe_myself.rs  mod.rs
tatami/src/endpoints/api/users/: amend.rs  create.rs  describe.rs  describe_myself.rs  destroy.rs  list.rs  mod.rs
tatami/src/error/: argon2_hash_error.rs  axum_json_rejection.rs  cache_error.rs  cache_pool_error.rs  database_error.rs  error_response.rs  mod.rs  password_error.rs  password_hash_error.rs  redis_error.rs  redis_pool_error.rs  sqlx_error.rs  task_error.rs  tokio_task_error.rs  utils.rs  validation_error.rs
tatami/src/error/error_response/: mod.rs
tatami/src/error/response/: error_out.rs  mod.rs  utils.rs
tatami/src/error/response/validation_error/: issue_map_out.rs  issue_out.rs  mod.rs
tatami/src/handle/: healthz.rs  mod.rs  verify.rs
tatami/src/handle/api/: mod.rs
tatami/src/handle/api/sessions/: create.rs  mod.rs
tatami/src/handle/api/settings/: describe_myself.rs
tatami/src/handle/api/users/: amend.rs  create.rs  describe.rs  destroy.rs  list.rs
tatami/src/me/: route.rs
tatami/src/scripts/: mod.rs
tatami/src/session/: cookie.rs  create.rs  destroy.rs  mod.rs  tests.rs
tatami/src/session/route/: create.rs  destroy.rs  list.rs  log_in.rs  log_out.rs  mod.rs  sign_up.rs  tests.rs  verify.rs
tatami/src/settings/: mod.rs
tatami/src/state/: mod.rs
tatami/src/test_utils/: login.rs  mod.rs
tatami/src/user/: amend.rs  create.rs  describe.rs  destroy.rs  list.rs  mod.rs  model.rs  route.rs  routes.rs
tatami/src/user/model/: amend.rs  create.rs  describe.rs  destroy.rs  list.rs  mod.rs  tests.rs
tatami/src/user/route/: amend.rs  create.rs  describe.rs  destroy.rs  list.rs  mod.rs
tatami/src/valid/: mod.rs  password.rs  username.rs  valid.rs
yakitori/: .env.example  .eslintrc.json  README.md  package-lock.json  package.json  prettier.config.mjs
yakitori/src/: urls.ts  utils.ts
yukata/: .env.example  .eslintrc.json  .prettierignore  package-lock.json  package.json
yukata/src/: utils.ts
(+112 files in other folders)
