[workspace]
package.edition = "2021"
resolver = "2"
members = [
    "tatami",
]

# this helps to sync used features so compile cache works better
[workspace.dependencies]

# https://lib.rs/crates/axum
# https://lib.rs/crates/axum-test
axum = { version = "0.7.3" }
axum-test = { version = "14.2.2" }

# https://lib.rs/crates/sqlx
# https://lib.rs/crates/sea-query
# https://lib.rs/crates/sea-query-binder
# Railway private networking generates non-x.509v3 certificates, so we need to use native TLS
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid", "time"] }
sea-query = { version = "0.30.6", no-default-features = false, features = [
    "backend-postgres",
    "with-json",
    "with-uuid",
    "with-time",
] }
sea-query-binder = { version = "0.5.0", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-json",
    "with-uuid",
    "with-time",
] }

# https://lib.rs/crates/redis
# https://lib.rs/crates/deadpool-redis
# Railway private networking generates non-x.509v3 certificates so we need to use native TLS
redis = { version = "0.24.0", features = ["tokio-native-tls-comp", "json"] }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1", "serde"] }

# https://lib.rs/crates/serde
# https://lib.rs/crates/serde_json
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }

# https://lib.rs/crates/uuid
uuid = { version = "1.6.1", features = ["serde", "v4"] }

# https://docs.rs/time/0.3.31/time/
time = { version = "0.3.31", features = ["std", "formatting", "parsing", "serde"] }

# https://lib.rs/crates/tracing
# https://lib.rs/crates/tracing-subscriber
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# https://lib.rs/crates/dotenvy
dotenvy = { version = "0.15.7" }

# https://lib.rs/crates/tower
# https://lib.rs/crates/tower-http
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

# https://lib.rs/crates/tokio
tokio = { version = "1.35.1", features = ["full"] }
