[workspace]
package.edition = "2021"
resolver = "2"
members = [
    "tatami",
]

# this helps to sync used features so compile cache works better
[workspace.dependencies]

# https://lib.rs/crates/axum
# https://lib.rs/crates/axum-test
# https://lib.rs/crates/axum-extra
axum = { version = "0.7.3" }
axum-test = { version = "14.2.2" }
axum-extra = { version = "0.9.1", features = ["cookie", "cookie-private"] }

# https://lib.rs/crates/sqlx
# https://lib.rs/crates/sea-query
# https://lib.rs/crates/sea-query-binder
# Railway private networking generates non-x.509v3 certificates, so we need to use native TLS
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid", "time"] }

# https://lib.rs/crates/redis
# https://lib.rs/crates/deadpool-redis
# Railway private networking generates non-x.509v3 certificates, so we need to use native TLS
redis = { version = "0.24.0", features = ["tokio-native-tls-comp", "json"] }
deadpool = { version = "0.10.0" }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1", "serde"] }

# https://lib.rs/crates/once_cell
# https://lib.rs/crates/regex
# https://lib.rs/crates/validator
once_cell = { version = "1.19.0" }
regex = { version = "1.10.2" }
validator = { version = "0.16.1", features = ["derive"] }

# https://lib.rs/crates/serde
# https://lib.rs/crates/serde_json
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }

# https://docs.rs/time/0.3.31/time/
# https://lib.rs/crates/url
# https://lib.rs/crates/uuid
time = { version = "0.3.31", features = ["std", "formatting", "parsing", "serde"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }

# https://lib.rs/crates/argon2
# https://lib.rs/crates/rand
# https://lib.rs/crates/rand_seeder
argon2 = { version = "0.5.2" }
rand = { version = "0.8.5" }
rand_seeder = { version = "0.2.3" }

# https://lib.rs/crates/tracing
# https://lib.rs/crates/tracing-subscriber
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# https://lib.rs/crates/dotenvy
dotenvy = { version = "0.15.7" }

# https://lib.rs/crates/tower
# https://lib.rs/crates/tower-http
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }

# https://lib.rs/crates/tokio
tokio = { version = "1.35.1", features = ["full"] }
