[package]
name = "tatami"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
