[package]
name = "tatami"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
deadpool = { workspace = true }
deadpool-redis = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rand_seeder = { workspace = true }
sentry = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
